fixed url error

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fouriercanvas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://tpszhao.github.io/react-gh-pages",
+  "homepage": "http://tpszhao.github.io/DFT-Visualization",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
