--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://tpszhao.github.io/DFT-Visualization",
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0"
